refactor(menu): update category and cart

--- a/components.json
+++ b/components.json
@@ -16,7 +16,9 @@
     "ui": "@/components/ui",
     "lib": "@/lib",
     "hooks": "@/hooks",
-    "assets": "@/assets"
+    "assets": "@/assets",
+    "consts": "@/const",
+    "store": "@/store"
   },
   "iconLibrary": "lucide"
 }
